2011-04-15  Eric Seidel  <eric@webkit.org>

        Reviewed by Mihai Parparita.

        queues.webkit.org should display when a bot last rebooted
        https://bugs.webkit.org/show_bug.cgi?id=58562

        There is more repeated code here than I would like.  I fear
        my django-fu isn't quite up to snuff.

        * QueueStatusServer/handlers/queuestatus.py:
        * QueueStatusServer/templates/queuestatus.html:

2011-04-14  Alok Priyadarshi  <alokp@chromium.org>

        Reviewed by Adam Barth.

        Remove dependency on chromium skia::PlatformCanvas
        https://bugs.webkit.org/show_bug.cgi?id=57563
        
        Fixed compile error on Mac when using Core Graphics.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::paintRect):

2011-04-14  Alok Priyadarshi  <alokp@chromium.org>

        Reviewed by James Robinson.

        Remove dependency on chromium skia::PlatformCanvas
        https://bugs.webkit.org/show_bug.cgi?id=57563

        * DumpRenderTree/chromium/TestShell.cpp:
        (makeCanvasOpaque):
        (TestShell::dumpImage):
        * DumpRenderTree/chromium/TestShell.h:
        * DumpRenderTree/chromium/WebThemeControlDRTWin.cpp:
        (WebThemeControlDRTWin::WebThemeControlDRTWin):
        (WebThemeControlDRTWin::draw):
        (WebThemeControlDRTWin::drawTextField):
        (WebThemeControlDRTWin::drawProgressBar):
        * DumpRenderTree/chromium/WebThemeControlDRTWin.h:
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::canvas):
        * DumpRenderTree/chromium/WebViewHost.h:

2011-04-14  Keith Kyzivat  <keith.kyzivat@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Add -maximize flag to QtTestBrowser and MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=58007

        Adds flag to start the test browsers maximized.
        Symbian started maximized on QtTestBrowser - made MiniBrowser follow
        suit.